# Colmapview.github.io

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  PLAN.md  README.md  STYLE_REFERENCE.md  deno.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tmpclaude-f7e8-cwd  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts  viteLocalAliasPolicy.ts
.claude/: settings.local.json
.ptn/: ptn.yaml
dev/: index.html
docs/: architecture.md  camera-model-conversions.md  distortion-model-manual-check.md  dx-implementation-validation-plan.md  spherical-visual-check.md  splat-webgpu-migration.md
e2e/: canvas-interactions.spec.ts  drop-zone.spec.ts  gallery.spec.ts  glsl-compile.spec.ts  keyboard-shortcuts.spec.ts  mask-export.spec.ts  modals.spec.ts  object-context-menu.spec.ts  viewer-controls.spec.ts  webgpu-bicycle.spec.ts  webgpu-psnr-app.spec.ts  webgpu-psnr-isolation.spec.ts  webgpu-psnr.spec.ts  webgpu-render.spec.ts
latest/: index.html
scripts/: copy-wasm-assets.mjs  run-pycolmap-tests.mjs  validate-bicycle-gsrender-gl.py
src/: App.tsx  appStartupPolicy.test.ts  appStartupPolicy.ts  appUrlLoadGuard.test.ts  appUrlLoadGuard.ts  index.css  main.tsx  vite-env.d.ts
tests/: colmapFixturePaths.ts
tests/pycolmap/: .gitignore  README.md  generate_fixtures.ts  pyproject.toml  test_roundtrip.py
v0.3.3/: index.html
v0.3.4/: index.html
v0.3.5/: index.html
v0.3.6/: index.html
v0.4.1/: index.html
v0.4.10/: index.html
v0.4.11/: index.html
v0.4.3/: index.html
v0.4.5/: index.html
(+1807 files in other folders)
